@@ -52,10 +52,10 @@ map_over_list (bfd *arch, void (*function) (bfd *, bfd *), struct list *list)
     {
       bfd *next;
 
-      head = arch->next;
+      head = arch->archive_next;
       while (head != NULL)
 	{
-	  next = head->next;
+	  next = head->archive_next;
 	  function (head, (bfd *) NULL);
 	  head = next;
 	}
@@ -74,7 +74,7 @@ map_over_list (bfd *arch, void (*function) (bfd *, bfd *), struct list *list)
 	  bfd_boolean found = FALSE;
 	  bfd *prev = arch;
 
-	  for (head = arch->next; head; head = head->next)
+	  for (head = arch->archive_next; head; head = head->archive_next)
 	    {
 	      if (head->filename != NULL
 		  && FILENAME_CMP (ptr->name, head->filename) == 0)
@@ -198,7 +198,7 @@ ar_open (char *name, int t)
 	  while (element)
 	    {
 	      *ptr = element;
-	      ptr = &element->next;
+	      ptr = &element->archive_next;
 	      element = bfd_openr_next_archived_file (ibfd, element);
 	    }
 	}
@@ -214,9 +214,9 @@ ar_addlib_doer (bfd *abfd, bfd *prev)
 {
   /* Add this module to the output bfd.  */
   if (prev != NULL)
-    prev->next = abfd->next;
+    prev->archive_next = abfd->archive_next;
 
-  abfd->next = obfd->archive_head;
+  abfd->archive_next = obfd->archive_head;
   obfd->archive_head = abfd;
 }
 
@@ -262,7 +262,7 @@ ar_addmod (struct list *list)
 	    }
 	  else
 	    {
-	      abfd->next = obfd->archive_head;
+	      abfd->archive_next = obfd->archive_head;
 	      obfd->archive_head = abfd;
 	    }
 	  list = list->next;
@@ -299,13 +299,13 @@ ar_delete (struct list *list)
 	    {
 	      if (FILENAME_CMP(member->filename, list->name) == 0)
 		{
-		  *prev = member->next;
+		  *prev = member->archive_next;
 		  found = 1;
 		}
 	      else
-		prev = &(member->next);
+		prev = &(member->archive_next);
 
-	      member = member->next;
+	      member = member->archive_next;
 	    }
 
 	  if (!found)
@@ -373,15 +373,15 @@ ar_replace (struct list *list)
 		  else
 		    {
 		      *prev = abfd;
-		      abfd->next = member->next;
+		      abfd->archive_next = member->archive_next;
 		      found = 1;
 		    }
 		}
 	      else
 		{
-		  prev = &(member->next);
+		  prev = &(member->archive_next);
 		}
-	      member = member->next;
+	      member = member->archive_next;
 	    }
 
 	  if (!found)
@@ -424,7 +424,7 @@ ar_list (void)
 
       for (abfd = obfd->archive_head;
 	   abfd != (bfd *)NULL;
-	   abfd = abfd->next)
+	   abfd = abfd->archive_next)
 	ar_directory_doer (abfd, (bfd *) NULL);
     }
 }
@@ -463,7 +463,7 @@ ar_extract (struct list *list)
 		  found = 1;
 		}
 
-	      member = member->next;
+	      member = member->archive_next;
 	    }
 
 	  if (!found)
